compiler/tools/fpp-to-dict/test/top/missingFwOpcodeType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingFwOpcodeType.fpp:45.1
topology T {
^
error: undefined symbol FwOpcodeType
note: when constructing a dictionary, the alias FwOpcodeType must be defined
